# calculator

./: CMakeLists.txt  main_console.cpp
.github/ISSUE_TEMPLATE/: proposal--request-.md
include/: core.h
lib/: CMakeLists.txt
lib/include/: data_types.h  foundation.h
lib/src/: foundation.cpp
resources/design/: Calculator_Application.mpp  UML-class-relationship-diagram.vsdx  Untitled.fig  User-interface.fig
